# ft_ls

./: CMakeLists.txt  README.md  main.c
ft_ls_v0/: Makefile  ft_ls_v0
ft_ls_v0/includes/: ft_ls.h
ft_ls_v0/libft/: Makefile
ft_ls_v0/libft/char_funcs/: ft_isascii.c
ft_ls_v0/libft/ft_printf/: fill_helper.c  float.c  ft_init.c  print_float.c
ft_ls_v0/libft/lst_funcs/: ft_lstmap.c
ft_ls_v0/libft/mem_funcs/: ft_memccpy.c  ft_memmove.c
ft_ls_v0/libft/str_funcs/: ft_atoi_base.c  ft_strjoin.c  ft_strlcat.c  ft_strncat.c  ft_strncmp.c
ft_ls_v0/libft/useful_funcs/: ft_swap.c
ft_ls_v0/src/: main.c
ft_ls_v1/: Makefile  ft_ls_v1  gen_alphabet  gen_alphabet.cpp  log  output
ft_ls_v1/includes/: ft_ls.h
ft_ls_v1/libft/: Makefile
ft_ls_v1/libft/char_funcs/: ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_tolower.c  ft_toupper.c
ft_ls_v1/libft/digit_funcs/: ft_abs.c
ft_ls_v1/libft/ft_printf/: extract_float_values.c  ft_printf.c  get_va_arg.c  get_va_digit_values.c  get_wp.c  (+9 more)
ft_ls_v1/src/: args_parse.c  generate_output.c  main.c  node_init.c  output_utils.c  print.c  print_nodes.c  processing_dir_output.c  processing_file_output.c  read_nodes.c  sort_nodes.c  utils.c
ls_easy/: main.c
test_directories/: link_to_docs  КП__ОценкаПМИ3-1.docx  Проведение_экзаменов_по_дисциплине.docx
test_directories/Contract/: IMG_4385.HEIC  IMG_4386.HEIC  IMG_4387.HEIC  IMG_4388.HEIC  IMG_4389.HEIC  IMG_4390.HEIC  IMG_4391.HEIC  IMG_4392.HEIC  IMG_4393.HEIC  IMG_4394.HEIC  IMG_4395.HEIC
testing_stuff/: main.c
(+85 files in other folders)
